--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@colsen1991/ngx-translate-extract-marker": "^3.0.1",
+    "@messageformat/core": "^3.4.0",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
+    "ngx-translate-messageformat-compiler": "^7.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -26,6 +31,7 @@
     "@angular-devkit/build-angular": "^19.0.6",
     "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.0",
+    "@angular/localize": "^19.0.5",
     "@types/jasmine": "~5.1.0",
     "@types/watermark-dom": "^2.3.4",
     "jasmine-core": "~5.4.0",
