Angular ngx-translate 动态多语言

--- a/angular.json
+++ b/angular.json
@@ -9,32 +9,15 @@
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
-      "i18n": {
-        "sourceLocale": "en-US",
-        "locales": {
-          "zh-CN": {
-            "translation": "src/locale/messages.cn.json",
-            "baseHref": "zh-cn"
-          },
-          "zh-TW": {
-            "translation": "src/locale/messages.tw.json",
-            "baseHref": "zh-tw"
-          }
-        }
-      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "baseHref": "/zh-tw/",
-            "localize": true,
-            "i18nMissingTranslation": "error",
             "outputPath": "dist/hello-world",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
-              "zone.js",
-              "@angular/localize/init"
+              "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
@@ -50,12 +33,6 @@
             "scripts": []
           },
           "configurations": {
-            "cn": {
-              "localize": ["zh-CN"]
-            },
-            "tw": {
-              "localize": ["zh-TW"]
-            },
             "production": {
               "budgets": [
                 {
@@ -82,12 +59,6 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
-            "cn": {
-              "buildTarget": "HelloWorld:build:development,cn"
-            },
-            "tw": {
-              "buildTarget": "HelloWorld:build:development,tw"
-            },
             "production": {
               "buildTarget": "HelloWorld:build:production"
             },
@@ -105,8 +76,7 @@
           "options": {
             "polyfills": [
               "zone.js",
-              "zone.js/testing",
-              "@angular/localize/init"
+              "zone.js/testing"
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
